Ref: Extracao da classe Sale
Co-Authored-By: daniso0412 <170635252+daniso0412@users.noreply.github.com>